correct uml into mermaid for readability